--- a/web/templates/layout/basic.html
+++ b/web/templates/layout/basic.html
@@ -25,7 +25,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Tracer</a>
+      <a class="navbar-brand" href="{% url 'index' %}">Tracer</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -38,17 +38,20 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+          {% if request.tracer %}
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{request.tracer.username}}<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="#">管理中心</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="{% url 'logout' %}">退出</a></li>
           </ul>
         </li>
+          {% else %}
+            <li><a href="{% url 'login' %}">登 录</a></li>
+            <li><a href="{% url 'register' %}">注 册</a></li>
+          {% endif %}
+
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
