--- a/web/templates/loginSmS.html
+++ b/web/templates/loginSmS.html
@@ -15,8 +15,8 @@
 {% endblock %}
 {% block content %}
     <div class="account">
-        <div class="title">用户注册</div>
-        <form id="regForm" method="POST" novalidate>
+        <div class="title">用户短信登陆</div>
+        <form id="loginForm" method="POST" novalidate>
             {% csrf_token %}
             {% for field in form %}
                 {% if field.name == 'code' %}
@@ -40,67 +40,70 @@
                     </div>
                 {% endif %}
             {% endfor %}
-
+            <div>
+                <div style="float: right;">
+                    <a href="{% url 'login' %}">用户名密码登录？</a>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-xs-3">
-                    <input id="btnSubmit" type="button" class="btn btn-primary" value="注  册"/>
+                    <input id="btnSubmit" type="button" class="btn btn-primary" value="登  陆"/>
                 </div>
             </div>
         </form>
     </div>
 {% endblock %}
 {% block js %}
-<script>
-    $(function(){
-        bindClickBtnSmS()
-        bindClickBtnSubmit()
-    })
-    //为btnSms注册单击响应事件
-    function bindClickBtnSmS(){
-        $('#btnSms').click(function(){
-            $('.error-msg').empty()
-            let mobilePhone = $('#id_mobile_phone').val()
-            $.ajax({
-                url:"{% url 'sendsms' %}",
-                type:'GET',
-                dataType:"JSON",
-                data:{mobile_phone:mobilePhone,tpl:'register'},
-                success:function(res){
-                    if(res.status){
-                        sendSmSRemind()
-                        {#console.log("发送成功！倒计时")#}
-                    }else {
-                        {#console.log(res.error)#}
-                        $.each(res.error,function(key,value){
-                            $('#id_'+key).next().text(value[0])
-                        })
-                    }
-            }
-            })
+    <script>
+        $(function(){
+            bindClickBtnSmS()
+            bindClickBtnSubmit()
         })
-        function sendSmSRemind(){
-            var $smsBtn = $('#btnSms')
-
-            $smsBtn.prop('disabled',true)
-            var time = 60
-            var remind = setInterval(function(){
-                $smsBtn.val(time + "秒后重新发送")
-                time=time-1
-                if(time < 1){
-                    clearInterval(remind)
-                    $smsBtn.val("点击获取验证码").prop('disabled',false)
+        function bindClickBtnSmS(){
+            $('#btnSms').click(function(){
+                $('.error-msg').empty()
+                let mobilePhone = $('#id_mobile_phone').val()
+                $.ajax({
+                    url:"{% url 'sendsms' %}",
+                    type:'GET',
+                    dataType:"JSON",
+                    data:{mobile_phone:mobilePhone,tpl:'login'},
+                    success:function(res){
+                        if(res.status){
+                            sendSmSRemind()
+                            {#console.log("发送成功！倒计时")#}
+                        }else {
+                            {#console.log(res.error)#}
+                            $.each(res.error,function(key,value){
+                                $('#id_'+key).next().text(value[0])
+                            })
+                        }
                 }
-            },1000)
-        }
+                })
+            })
+            function sendSmSRemind(){
+                var $smsBtn = $('#btnSms')
+
+                $smsBtn.prop('disabled',true)
+                var time = 60
+                var remind = setInterval(function(){
+                    $smsBtn.val(time + "秒后重新发送")
+                    time=time-1
+                    if(time < 1){
+                        clearInterval(remind)
+                        $smsBtn.val("点击获取验证码").prop('disabled',false)
+                    }
+                },1000)
+            }
 
     }
-    function bindClickBtnSubmit(){
+        function bindClickBtnSubmit(){
         $("#btnSubmit").click(function () {
             $('.error-msg').empty()
             $.ajax({
                 method:'POST',
-                url:"{% url 'register' %}",
-                data:$('#regForm').serialize(),//返回表单中的数据和csrf_token
+                url:"{% url 'loginsms' %}",
+                data:$('#loginForm').serialize(),//返回表单中的数据和csrf_token
                 dataType: 'JSON',
                 success(res){
                     if(res.status){
@@ -115,5 +118,5 @@
             })
         })
     }
-</script>
+    </script>
 {% endblock %}
