--- a/web/templates/wiki_form.html
+++ b/web/templates/wiki_form.html
@@ -98,6 +98,8 @@
     <script>
 
         var WIKI_DETAIL_UTL = "{% url 'wiki' project_id=request.tracer.project.id %}"
+        var WIKI_UPLOAD_URL = "{% url 'wiki_upload' project_id=request.tracer.project.id%}"
+
         $(function () {
 
             initCatalog()
@@ -112,7 +114,10 @@
             editormd('editor',{
                 placeholder:"请输入内容",
                 height: 500,
-                path:"{% static 'plugin/editor-md/lib/' %}"
+                path:"{% static 'plugin/editor-md/lib/' %}",
+                imageUpload:true,
+                imageFormats:['jpg','jpeg','png','gif'],
+                imageUploadURL:WIKI_UPLOAD_URL
             })
         }
 
