--- a/web/templates/file.html
+++ b/web/templates/file.html
@@ -1,4 +1,5 @@
 {% extends 'layout/manage.html' %}
+{% load static %}
 
 {% block css %}
     <style>
@@ -14,6 +15,27 @@
 
         .panel-default > .panel-heading span {
             padding: 0 5px;
+        }
+
+        .panel-default > .panel-heading .function .upload {
+            overflow: hidden;
+        }
+
+        .panel-default > .panel-heading .function .upload input {
+            opacity: 0;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 76px;
+            left: -2px;
+            overflow: hidden;
+        }
+
+        .upload-progress {
+            position: fixed;
+            right: 2px;
+            bottom: 2px;
+            width: 400px;
         }
     </style>
 {% endblock %}
@@ -36,9 +58,13 @@
                     {% endfor %}
 
                 </div>
-                <div>
+                <div class="function">
+                    <div class="btn btn-primary btn-xs upload" style="position: relative">
+                        <div><i class="fa fa-upload" aria-hidden="true"></i> 上传文件</div>
+                        <input type="file" multiple name="uploadFile" id="uploadFile">
+                    </div>
                     <a class="btn btn-success btn-xs" data-toggle="modal" data-target="#addModal" data-whatever="新建文件夹">
-                        <i class="fa fa-plus-circle" aria-hidden="true"></i>新建文件夹
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i> 新建文件夹
                     </a>
                 </div>
             </div>
@@ -54,7 +80,7 @@
                     <th>操作</th>
                 </tr>
                 </thead>
-                <tbody>
+                <tbody id="rowList">
                 {% for item in file_object_list %}
                     <tr>
                         <td>
@@ -84,6 +110,10 @@
                                    data-toggle="modal" data-target="#addModal" data-whatever="修改文件夹"
                                    data-fid="{{ item.id }}" data-name="{{ item.name }}">
                                     <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                                </a>
+                            {% else %}
+                                <a class="btn btn-default btn-xs" href="{% url 'file_download' project_id=request.tracer.project.id file_id=item.id %}">
+                                    <i class="fa fa-cloud-download" aria-hidden="true"></i>
                                 </a>
                             {% endif %}
 
@@ -147,30 +177,180 @@
             </div>
         </div>
     </div>
+    <div class="upload-progress hide" id="uploadProgress">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <i class="fa fa-cloud-upload" aria-hidden="true"></i>上传进度
+            </div>
+            <table class="table">
+                <tbody id="progressList">
+
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="hide">
+        <table id="progressTemplate">
+            <tr>
+                <td>
+                    <div class="name"></div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
+                             aria-valuemax="100" style="width: 0%;">
+                            0%
+                        </div>
+                    </div>
+                    <div class="progress-error"></div>
+                </td>
+            </tr>
+        </table>
+    </div>
+
+    <div class="hide">
+        <table id="rowTpl">
+            <tr>
+                <td>
+                    <i class="fa fa-file" aria-hidden="true"></i>
+                    <span class="name"></span>
+                </td>
+                <td class="file_size"></td>
+                <td class="username"></td>
+                <td class="datetime"></td>
+                <td>
+
+                    <a class="btn btn-default btn-xs download">
+                        <i class="fa fa-cloud-download" aria-hidden="true"></i>
+                    </a>
+
+                    <a class="btn btn-danger btn-xs delete" data-toggle="modal" data-target="#alertModal">
+                        <i class="fa fa-trash" aria-hidden="true"></i>
+                    </a>
+                </td>
+            </tr>
+        </table>
+    </div>
 
 {% endblock %}
 
 {% block js %}
+    <script src="{% static 'js/cos-js-sdk-v5.min.js' %}"></script>
     <script>
 
         var FOLDER_URL = "{% url 'file' project_id=request.tracer.project.id %}"
         var FILE_DELETE_URL = "{% url 'file_delete' project_id=request.tracer.project.id %}"
+        var COS_CREDENTIAL = "{% url 'cos_credential' project_id=request.tracer.project.id  %}"
+        var FILE_POST_URL = "{% url 'file_post'  project_id=request.tracer.project.id %}"
+        var CURRENT_FOLDER_ID = '{{ folder_object.id }}'
 
 
         $(function () {
             initAddModal();
             bindModelSubmit();
             bindDeleteSubmit();
+            bindUploadFile();
 
         })
+
+        function bindUploadFile() {
+            $('#uploadFile').change(function () {
+
+                $('#progressList').empty()
+
+                var fileList = $(this)[0].files
+
+                var checkFileList = []
+                $.each(fileList, function (index, fileObject) {
+                    //上传文件
+                    checkFileList.push({'name': fileObject.name, 'size': fileObject.size})
+                })
+
+                var COS_OBJECT = new COS({
+                    getAuthorization: function (options, callback) {
+                        //向Django后台发送请求，获取临时凭证
+                        $.post(COS_CREDENTIAL,
+                            JSON.stringify(checkFileList)
+                            , function (res) {
+                                if (res.status) {
+                                    var credentials = res.data && res.data.credentials;
+                                    callback({
+                                        TmpSecretId: credentials.tmpSecretId,
+                                        TmpSecretKey: credentials.tmpSecretKey,
+                                        XCosSecurityToken: credentials.sessionToken,
+                                        StartTime: res.data.startTime,
+                                        ExpiredTime: res.data.expiredTime
+                                    })
+                                    $('#uploadProgress').removeClass('hide')
+                                } else {
+                                    alert(res.error)
+                                }
+
+                            })
+                    }
+                })
+
+                $.each(fileList, function (index, fileObject) {
+
+                    var fileName = fileObject.name;
+                    var fileSize = fileObject.size
+                    var key = (new Date()).getTime() + "_" + fileName
+
+                    var tr = $('#progressTemplate').find('tr').clone()
+                    tr.find('.name').text(fileName)
+                    $('#progressList').append(tr)
+
+                    COS_OBJECT.putObject({
+                        Bucket: '{{ request.tracer.project.bucket }}',
+                        Region: '{{ request.tracer.project.region }}',
+                        Key: key,
+                        Body: fileObject,
+                        onProgress: function (progressData) {
+                            var percent = progressData.percent * 100 + '%'
+                            tr.find('.progress-bar').text(percent)
+                            tr.find('.progress-bar').css('width', percent)
+
+                        }
+
+                    }, function (err, data) {
+                        console.log(err || data)
+                        if (data && data.statusCode == 200) {
+                            $.post(FILE_POST_URL, {
+                                name: fileName,
+                                key: key,
+                                file_size: fileSize,
+                                parent: CURRENT_FOLDER_ID,
+                                etag: data.ETag,
+                                file_path: data.Location
+                            }, function (res) {
+                                // console.log(res)
+                                var newTr = $('#rowTpl').find('tr').clone()
+                                newTr.find('.name').text(res.data.name)
+                                newTr.find('.file_size').text(res.data.file_size)
+                                newTr.find('.username').text(res.data.username)
+                                newTr.find('.datetime').text(res.data.datetime)
+                                newTr.find('.delete').attr('data-fid', res.data.id)
+                                newTr.find('.download').attr('href', res.data.download_url)
+
+                                $('#rowList').append(newTr)
+                                tr.remove()
+                            })
+                        } else {
+                            tr.find('.progress-error').text('上传失败')
+                        }
+
+                    })
+                })
+
+            })
+        }
+
         function bindDeleteSubmit() {
-            $('#btnDelete').click(function(){
+            $('#btnDelete').click(function () {
                 $.ajax({
-                    url:FILE_DELETE_URL,
+                    url: FILE_DELETE_URL,
                     type: 'GET',
                     data: {fid: $(this).attr('fid')},
                     success: function (res) {
-                        if (res.status){
+                        if (res.status) {
                             location.href = location.href
                         }
                     }
